--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
   <head>
-  <title>
-    Nice,boy
-  </title>
+    <title>Nice,boy</title>
   </head>
-  
   <body>
     Hello,Mybody
   </body>
