--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
   <head>
     <title>Nice,boy</title>
   </head>
-  <body>
+    <head>
+        <title>My awesome web page</title>
+    </head>
+
     Hello,Mybody
   </body>
 </html> 
