--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
   <head>
     <title>Nice,boy</title>
   </head>
-    <head>
-        <title>My awesome web page</title>
-    </head>
-
+  <body>
+    <h1>nice to you</h1>
     Hello,Mybody
   </body>
 </html> 
